[project]
name = "spotify-downloader"
description = "Python CLI for downloading music playlists from Spotify."
requires-python = ">=3.8"
authors = [
    { name = "glomatico" },
    { name = "AmazinAxel" }
]
dependencies = ["click", "pybase62", "pywidevine", "pyyaml", "yt-dlp"]
readme = "README.md"
dynamic = ["version"]

[project.urls]
repository = "https://github.com/AmazinAxel/spotify-downloader"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project.scripts]
spotify-downloader = "spotify_downloader.main:main"
